<resources>
    <string name="app_name">Trackr</string>

    <string name="phone">Phone</string>
    <string name="psw">Password</string>
    <string name="cnfpsw">Confirm password</string>
    <string name="login">Login</string>
    <string name="regLink">New User? Create Account.</string>

    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="reg">Create Account</string>
    <string name="loginLink">Already a member? Login.</string>

    <!-- Navigation menu string resource -->
    <string name="nav_menu1">Main Menu</string>
    <string name="nav_menu2">Settings</string>
    <string name="nav_menu4">Logout</string>
    <string name="nav_menu3">About Developers</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="power_mode">Power Mode</string>
    <string name="normal">Normal</string>
    <string name="power_saver">Power Saver</string>
    <string name="enable_tracking">Enable Tracking </string>
    <string name="track_friend_link">Track</string>
    <string name="permission_manager_link">Permission Manager</string>
    <string name="tracking_enabled">Tracking is going on...</string>
    <string name="tracking_disabled">Tracking is currently disabled.</string>
    <string name="sub_header">Online Friends</string>

    <string name="change_permission_status">Change </string>
    <string name="default_permission_status">Denied </string>

    <string name="friend_list_sub_header">Friend List</string>
    <string name="search_friend_sub_header">Enter phone number to search</string>
    <string name="search_friend_button">Search</string>

    <string name="selected_friend_init_msg">No friends selected yet. Click on friend to select.</string>
    <string name="selected_friend">Selected Friend: </string>
    <string name="selected">Selected </string>

    <string name="selected_friend_permission">Selected Friend: </string>

    <string name="permission_manager_menu_option">Permission Manager</string>
    <string name="logout_menu_option">Logout</string>

    <string name="profile_welcome_message">Welcome</string>
    <string name="profile_name_header">Name:</string>
    <string name="profile_id_header">Id: </string>
    <string name="profile_phone_header">Phone: </string>
    <string name="title_activity_track_friend">Map</string>


</resources>
